--- a/src/resources/views/me/info.hbs
+++ b/src/resources/views/me/info.hbs
@@ -7,16 +7,10 @@
                 <a href="">Tài khoản của tôi</a>   
             </div>
             <div>
-                <a href="">Hồ sơ</a>   
+                <a href="/me/change_password_site">Đổi mật khẩu</a>   
             </div>
             <div>
-                <a href="">Đổi mật khẩu</a>   
-            </div>
-            <div>
-                <a href="">Đơn mua</a>   
-            </div>
-            <div>
-                <a href="">Thông báo</a>
+                <a href="/me/order">Đơn mua</a>   
             </div>
         </div>
         
