--- a/src/resources/views/me/store.hbs
+++ b/src/resources/views/me/store.hbs
@@ -83,7 +83,7 @@
                     {{#each products}}
                     <div class="grid__column-2-4">
                         <!-- Product Item -->
-                        <a class="home-product-item" href="">
+                        <a class="home-product-item" href="/me/{{this.productCode}}">
                             <div class="home-product-item__img" style='background-image: url("{{this.image}}")'></div>
                             <h4 class="home-product-item__name">{{this.productName}}</h4>
                             <div class="home-product-item__price">
