--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -47,7 +47,7 @@
             {{#if access}}
             {{!-- assets/images/avatar.png --}}
             <li class="header__navbar-item header__navbar-user">
-                <img src="../image/logo.png" alt="" class="header__navbar-user-avatar">
+                <img src="../assets/images/avatar.png" alt="" class="header__navbar-user-avatar">
                 <span class="header__navbar-user-name">{{name}}</span>
                 <ul class="header__navbar-user-menu">
                     <li class="header__navbar-user-item">
@@ -110,14 +110,14 @@
                     </ul>
                 </div>
                 <div class="header__search-quickly">
-                    <a href="">Quần</a>
-                    <a href="">Áo</a>
-                    <a href="">Điện thoại</a>
-                    <a href="">Mũ</a>
-                    <a href="">Phụ kiện</a>
-                    <a href="">Đồng hồ</a>
-                    <a href="">Giầy, dép</a>
-                    <a href="">Túi xách</a>
+                    <a href="/?productline&type=Quần">Quần</a>
+                    <a href="/?productline&type=Áo">Áo</a>
+                    <a href="/?productline&type=Điện Thoại">Điện thoại</a>
+                    <a href="/?productline&type=Mũ">Mũ</a>
+                    <a href="/?productline&type=Phụ Kiện">Phụ kiện</a>
+                    <a href="/?productline&type=Đồng Hồ">Đồng hồ</a>
+                    <a href="/?productline&type=Giầy, Dép">Giầy, dép</a>
+                    <a href="/?productline&type=Túi Xách">Túi xách</a>
                 </div>
             </div>
             <div class="header__search-selection">
