--- a/src/resources/views/me/user_list.hbs
+++ b/src/resources/views/me/user_list.hbs
@@ -1,20 +1,37 @@
 <table class="table">
     <thead>
         <tr>
+        
+        <th scope="col">tick</th>
         <th scope="col">userId</th>
         <th scope="col">username</th>
         <th scope="col">password</th>
         <th scope="col">Họ và Tên</th>
         </tr>
     </thead>
-    <tbody>
-        {{#each users}}
-        <tr>
-        <th scope="row">{{this.userId}}</th>
-        <td>{{this.username}}</td>
-        <td>{{this.password}}</td>
-        <td>{{this.name}}</td>
-        </tr>
-        {{/each}}
-    </tbody>
+    <form action="/me/delete/user?_method=DELETE" method="POST" id="deleteUserForm">
+        <tbody>
+            {{#each users}}
+            <tr>
+            <td><input class="check-purchase" type="checkbox" value="{{this.userId}}" name="userId"></td>        
+            <th scope="row">{{this.userId}}</th>
+            <td>{{this.username}}</td>
+            <td>{{this.password}}</td>
+            <td>{{this.name}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+        <button type="submit" class="btn btn-primary">Xóa người dùng</button>
+    </form>
 </table>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        /*const deleteUserBtn = document.querySelector('.btn-primary');
+        const deleteUserForm = document.querySelector('#deleteUserForm');
+        deleteUserForm.onsubmit = function(e) {
+            e.preventDefault();
+            
+        }*/
+    })
+</script>
