--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1235,4 +1235,6 @@ i.home-product-item__like-icon-fill {
 .purchase-img {
   width: 100%;
   height: 100%; }
-  
+
+.warningInvalid {
+  color: var(--primary-color); }
