--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1509,3 +1509,7 @@ i.home-product-item__like-icon-fill {
     width: 100%;
     height: 100%;
 }
+
+.warningInvalid {
+    color: var(--primary-color);
+}
