--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -216,6 +216,7 @@ html {
 
 .select-input__link:hover {
     color: var(--primary-color);
+    text-decoration: none;
 }
 
 .pagination {
@@ -231,6 +232,7 @@ html {
 
 .pagination-item--active .pagination-item__link:hover {
     filter: brightness(95%);
+    text-decoration: none;
 }
 
 .pagination-item {
@@ -1140,6 +1142,19 @@ html {
     min-width: 90px;
 }
 
+.home-filter__btn:hover {
+    opacity: 0.5;
+}
+
+.home-filter__btn-link {
+    color: var(--primary-color);
+}
+
+.home-filter__btn-link:hover {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
 .home-filter__page-num {
     font-size: 1.4rem;
     color: var(--text-color);
@@ -1419,6 +1434,7 @@ i.home-product-item__like-icon-fill {
 
 .footer-item__link:hover {
     color: var(--primary-color);
+    text-decoration: none;
 }
 
 .footer-item__icon {
@@ -1513,3 +1529,4 @@ i.home-product-item__like-icon-fill {
 .warningInvalid {
     color: var(--primary-color);
 }
+
