--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -90,7 +90,7 @@
                         <a href="/?sort&type=new/?page&page=1">Mới nhất</a>
                     </button>  --}}
                     <button class="home-filter__btn btn home-filter__btn-bestsell">
-                        <a href="/?sort&field=soldQuantity&type=DESC">Bsn chạy</a>
+                        <a href="/?sort&field=soldQuantity&type=DESC" class="home-filter__btn-link">Bán chạy</a>
                     </button>
                     <div class="select-input">
                         <span class="select-input__label">Giá</span>
