--- a/src/resources/views/me/change_password.hbs
+++ b/src/resources/views/me/change_password.hbs
@@ -30,21 +30,22 @@
                 <label for="staticEmail" class="col-sm-2 col-form-label">Mật khẩu cũ</label>
                 <div class="col-sm-10">
                 <input type="password" class="form-control" id="old-password" value="" name="oldPassword">
-                <h3 id="textWarningWrongPassword"></h3>
+                <span class="warningInvalid"></span>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Mật khẩu mới</label>
                 <div class="col-sm-10">
-                <input type="password" class="form-control" value="" name="newPassword">
+                    <input type="password" class="form-control" value="" name="newPassword">
                 </div>
             </div>
 
             <div class="form-group row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Xác nhận mật khẩu mới</label>
                 <div class="col-sm-10">
-                <input type="password" class="form-control" value="" name="newPasswordConfirm">
+                    <input type="password" class="form-control" value="" name="newPasswordConfirm">
+                    <span class="warningInvalid"></span>
                 </div>
             </div>
 
@@ -62,19 +63,25 @@
         const oldPasswordInput = document.querySelector(`input[name="oldPassword"]`);
         const newPasswordInput = document.querySelector(`input[name="newPassword"]`);
         const newPasswordConfirmInput = document.querySelector(`input[name="newPasswordConfirm"]`);
-        const textWarning = document.getElementById("textWarningWrongPassword");
+        const textWarning = document.querySelectorAll('.warningInvalid');
         const changePasswrodForm = document.getElementById("changePasswordForm");
+
         changePasswrodForm.onsubmit = function(e) {
             e.preventDefault();
             if (oldPasswordInput.value !== oldPasswordValue) {
-                textWarning.innerText = "Bạn nhập sai mật khẩu!";
+                textWarning[0].innerText = "Bạn nhập sai mật khẩu!";
+            }
+            else {
+                if (newPasswordInput.value === newPasswordConfirmInput.value) {
+                    changePasswrodForm.action = `/me/change_password/` + newPasswordInput.value + `?_method=PATCH`;
+                    changePasswrodForm.submit();
+                }
+                else {
+                    textWarning[1].innerText = "Bạn nhập sai mật khẩu!";
+                }
             }
             oldPasswordInput.oninput = function() {
-                textWarning.innerText = "";
-            }
-            if (newPasswordInput.value === newPasswordConfirmInput.value) {
-                changePasswrodForm.action = `/me/change_password/` + newPasswordInput.value + `?_method=PATCH`;
-                changePasswrodForm.submit();
+                textWarning[0].innerText = "";
             }
         }
     })
