--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,4 +1,3 @@
-
 <div class="grid">
     <nav class="header__navbar">
         <ul class="header__navbar-list">
@@ -16,7 +15,7 @@
                                 <img src="../assets/images/AppStore.png" alt="AppStore" class="header__qr-download-img"> 
                             </a>
                         </div>
-                    </div> 
+                    </div>
                 </div>
             </li>
             <li class="header__navbar-item">
@@ -192,9 +191,12 @@
         fetch("http://localhost:3000/me/added_to_cart")
         .then(res => res.json())
         .then(data => {
+            
             const products = Array.from(data.products);
             headerCartQuantity.innerText = `${products.length}`;
             const htmlProduct = products.map((product) => {
+                const formatter = new Intl.NumberFormat();
+                product.priceEach = formatter.format(product.priceEach * product.discount / 100);
                 return `
                     <li class="header__cart-item">
                         <img src="${product.image}" alt="" class="header__cart-img">
@@ -207,7 +209,6 @@
                                     <span class="header__cart-item-quantity">${product.quantityOrdered}</span>
                                 </div>
                             </div>
-
                             <div class="header__cart-item-body">
                                 <span class="header__cart-item-description">
                                     Phân loại: ${product.productline}
@@ -229,6 +230,3 @@
         }
     )
 </script>
-
-
-
